tests/ui/associated-inherent-types/assoc-inherent-no-body.stderr
error: associated type in `impl` without body
  --> $DIR/assoc-inherent-no-body.rs:7:5
   |
LL |     type Baz;
   |     ^^^^^^^^-
   |             |
   |             help: provide a definition for the type: `= <type>;`

error: aborting due to 1 previous error

